# SuntynOS

./: .replit  README.md  app_enhanced.py  app_simple_enhanced.py  main.py  performance_monitor.py  pyproject.toml  replit.md  requirements_final.txt  run.py  streamlit_app.py
temp/SuntynAI-1/temp/SuntynAI/: Procfile  app.py  app_simple.py  database_config.py  main.py  manifest.json  models.py  pyproject.toml  replit.md  requirements_clean.txt  runtime.txt  service-worker.js
temp/SuntynAI-1/temp/SuntynAI/attached_assets/: Pasted-Aapka-vision-hai-ek-TinyWow-ILovePDF-ya-Adobe-PDF-Tools-jaise-hybrid-eco-friendly-advanced-UI-PD-1753003456215_1753003456217.txt  Pasted-Bhai-Image-Toolkit-ka-concept-ekdum-hai-aur-tumne-jo-20-tools-ka-full-hybrid-system-design-diy-1752950330055_1752950330056.txt
temp/SuntynAI-1/temp/SuntynAI/routes/: pdf_routes.py
temp/SuntynAI-1/temp/SuntynAI/static/css/: bootstrap-custom.css  main.css  performance.css  professional-enhanced.css
temp/SuntynAI-1/temp/SuntynAI/static/js/: categories-modern.js  drag-drop.js  hero-modern.js  lazy-loader.js  main.js  performance-optimizer.js  toolkit.js
temp/SuntynAI-1/temp/SuntynAI/templates/: about.html  base.html  faq.html  pdf_toolkit_section.html
temp/SuntynAI-1/temp/SuntynAI/templates/errors/: 500.html
temp/SuntynAI-1/temp/SuntynAI/templates/govt_tools/: income_cert.html  rent_agreement.html  voter_card_check.html
temp/SuntynAI-1/temp/SuntynAI/templates/image_tools/: background_remover.html  convert_to_webp.html  grayscale_converter.html  image_resizer.html
temp/SuntynAI-1/temp/SuntynAI/templates/pdf_tools/: annotations.html  bookmarks.html  compare.html  compress.html  merge.html  pdf_merger.html  pdf_protect.html  pdf_splitter.html  pdf_to_excel.html  pdf_to_image.html  pdf_to_word.html  protect.html  redaction.html  rotate.html  split.html  unlock.html
temp/SuntynAI-1/temp/SuntynAI/templates/tools/: compress.html  split.html
temp/SuntynAI-1/temp/SuntynAI/tools/: compressor.py  converter.py  merger.py
temp/SuntynAI-1/temp/SuntynAI/utils/: image_tools.py  pdf_tools.py  security.py
templates/: base.html  (+6 more)
(+235 files in other folders)
