[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.5",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pypdf2>=3.0.1",
    "python-barcode>=0.15.1",
    "qrcode>=8.2",
    "bcrypt>=4.3.0",
    "requests>=2.32.4",
    "pymupdf>=1.26.3",
    "reportlab>=4.4.2",
    "werkzeug>=3.1.3",
]
