[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "nltk>=3.9.1",
    "cryptography>=45.0.5",
    "requests>=2.32.4",
    "flask-socketio>=5.5.1",
    "pillow>=11.3.0",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "pypdf2>=3.0.1",
    "python-barcode>=0.15.1",
    "bcrypt>=4.3.0",
    "qrcode>=8.2",
]
